# anomaly-detection

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/: AID362red_train_allpossiblenominal.arff  Reuters-corn-100.arff  ad_nominal.arff  apascal_entire_trainvsall.arff  bank-additional-ful-nominal.arff  celeba_baldvsnonbald.arff  census-income-full-nominal.arff  chess_krkopt_zerovsall.arff  cmc-nominal.arff  covertype_nominal_4vs123567.arff  kddcup99-corrected-probevsnormal-nominal-cleaned.arff  kddcup99-corrected-u2rvsnormal-nominal-cleaned.arff  solar-flare_FvsAll-cleaned.arff
notebooks/: project.ipynb
src/: __init__.py  main.py
