[project]
name = "anomaly-detection"
version = "0.1.0"
description = "Anomaly detection project"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "arff>=0.9",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "kedro>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "numpy>=2.4.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pyarrow>=18.1.0",
    "pyspark>=3.5.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.workspace]
members = [
    "test",
]
